# hw-07-08-distributed-patterns-Aksolott

./: Readme.md  docker-compose.yaml  prometheus.yml
cpp/: CMakeLists.txt  Dockerfile
cpp/configs/: config.yaml
cpp/src/: main.cpp  service.cpp  service.hpp
go/: Dockerfile  go.mod  go.sum
go/client/: main.go
go/server/: main.go
python/: Dockerfile  pyproject.toml
python/proto/: service.proto
python/src/: client.py  codegen.py  server.py
python/src/hw07_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rust/: Cargo.toml  Dockerfile  build.rs
rust/src/: client.rs  server.rs
