[project]
name = "hw07-python"
version = "0.1.0"
description = "Resilience patterns implementation in Python"
requires-python = ">=3.10"

dependencies = [
    "grpcio>=1.60.0",
    "tenacity>=8.2.0",
    "circuitbreaker>=2.0.0",
    "prometheus-client>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Для uv (менеджер пакетов)
[tool.uv]
dev-dependencies = [
    "grpcio-tools>=1.60.0",
]